fixing responsive on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ html{
 body{
     font-family: var(--font-family);
     height: 200vh;
+    width: 100vw;
     overflow-x: hidden;
 }
 
@@ -49,6 +50,8 @@ body{
 .content{
     padding-top: calc(var(--nav-height) + 1.5em);
     min-height: 100vh;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .content .content-title{
@@ -640,10 +643,15 @@ body{
 
 @media (max-width: 575.98px) { 
     .owl-prev{
-        left: -10px;
+        visibility: hidden;
     }
     .owl-next{
-        right: -10px;
+        visibility: hidden;
+    }
+
+    .float-btn{
+        bottom: 1.25em;
+        right: .5em;
     }
 
     /* Navbar */
@@ -677,10 +685,10 @@ body{
 
 @media (max-width: 991.98px) {
     
-    .float-btn{
+    /* .float-btn{
         bottom: .5em;
         right: .5em;
-    }
+    } */
     
     .owl-prev{
         left: -20px;
